--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,11 @@ services:
     #service_name:
     #    class: AppBundle\Directory\ClassName
     #    arguments: ['@another_service_name', 'plain_value', '%parameter_name%']
+
+    users.class:
+        class: DemoApiBundle\Entity\Users
+        shared: false
+
+    user.rest:
+        class: DemoApiBundle\Service\UsersRest
+        arguments: ["@users.class"]
