--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+users:
+    type: rest
+    resource: DemoApiBundle:Default
+    prefix: /api
