--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,7 +46,7 @@ doctrine:
         port: ~
         dbname: formation
         user: root
-        password: ~
+        password: root
         charset: UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
@@ -85,3 +85,27 @@ fos_rest:
         default_engine: twig
     routing_loader:
         default_format: json
+
+jms_serializer:
+    metadata:
+        directories:
+
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+    paths:
+        '^/api/':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+
+sensio_framework_extra:
+    request: { converters: true }
+    view:    { annotations: false }
+    router:  { annotations: true }
